<resources>
    <string name="app_name">HyperChat</string>
    <string name="input_username">Username</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_about">About</string>
    <string name="text_sign_up">Already have an account?</string>
    <string name="text_sign_in">Click to Sign Up</string>
    <string name="text_menu_settings">Settings</string>
    <string name="text_menu_log_out">Log Out</string>
    <string name="btn_google">GOOGLE</string>
    <string name="btn_facebook">FACEBOOK</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>