<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/list_profile_image3"
        style="@style/Theme.Chat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="156dp"
        android:padding="5dp"
        android:src="@drawable/avatar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_username_change"
        style="@style/Theme.Chat"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/input_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_profile_image3" />

    <EditText
        android:id="@+id/input_about"
        style="@style/Theme.Chat"
        android:layout_width="297dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/input_about"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_change" />

    <Button
        android:id="@+id/btn_save"
        style="@style/Theme.Chat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_about" />

    <ImageView
        android:id="@+id/profilePicAddBtn"
        style="@style/Theme.Chat"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/list_profile_image3"
        app:layout_constraintEnd_toEndOf="@+id/list_profile_image3" />

    <Button
        android:id="@+id/btn_settings_back"
        style="@style/Theme.Chat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>